--- a/Portfolio/package.json
+++ b/Portfolio/package.json
@@ -11,9 +11,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "bootstrap": "^5.2.3",
+    "bulma": "^1.0.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.79.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
